# pretalx-webhook-plugin

./: MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: style.yml
pretalx_webhook/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
